@@ -93,6 +93,7 @@ E(OP_GMTrainSkillConfirm)
 E(OP_SkillUpdate)
 E(OP_TributeInfo)
 E(OP_TaskHistoryReply)
+E(OP_TaskDescription)
 
 //list of packets we need to decode on the way in:
 D(OP_SetServerFilter)
