@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 01/15/2013 ==
+Derision: RoF: Added Encode for OP_TaskDescription and removed RoF specific code for it from tasks.cpp
+
 == 01/14/2013 ==
 Derision: RoF: Fixed bug that was causing only one task to show in the Active Task window.
 Derision: Fixed potential crash in QuestManager::varlink. Removed some unused variables that gcc was warning about.
